--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,37 +1,21 @@
 name: github pages
 
+
 on:
   push:
     branches:
-      - master  # 或 master，根据分支情况修改
+      - master # default branch
 
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-
-        uses: actions/checkout@v3
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'  # 使用最新稳定的 Node.js 版本
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build project
-        run: npm run docs:build  # 如果项目需要编译，使用此命令
-
-      -name : Deploy
+      - uses: actions/checkout@v3
+      - run: npm install
+      - run: npm run docs:build
+      - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs-dist
-          # port: 22  # 可按需修改端口
-          # script: |
-          #   cd /path/to/project
-          #   git pull origin main  # 拉取最新代码
-          #   npm install
-          #   npm run start  # 启动项目（如果需要）
-
