--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,9 @@
 name: github pages
 
-
 on:
   push:
     branches:
-      - master # default branch
-
+      - main # default branch
 
 jobs:
   deploy:
